--- a/app/src/main/res/layout/activity_make_room.xml
+++ b/app/src/main/res/layout/activity_make_room.xml
@@ -6,6 +6,70 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".component.MakeRoom">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/borderbox"
+            android:orientation="vertical"
+            android:padding="8dp">
 
-</LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/aa"
+                android:text="정보입력"
+                android:textColor="#19ce60"
+                android:textSize="24dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="20"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/aa"
+                    android:text="상호명 : "
+                    android:textColor="#333"
+                    android:textSize="18dp" />
+
+                <EditText
+                    android:id="@+id/edit_myname"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="80"
+                    android:text="아무개"
+                    android:textColor="#868e96"
+                    android:textSize="16dp" />
+
+            </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <Button
+                    android:id="@+id/btn_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/graybox"
+                    android:fontFamily="@font/aa"
+                    android:text="저장하기"
+                    android:textColor="#fff"
+                    android:textSize="24dp" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
