--- a/app/src/main/res/drawable-v24/roomenter_box.xml
+++ b/app/src/main/res/drawable-v24/roomenter_box.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle">
-    <solid android:color="#3c5b9a" />
+    <solid android:color="#000000" />
     <corners
-        android:bottomLeftRadius="50dp"
-        android:bottomRightRadius="50dp"
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp" />
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp" />
     <stroke
         android:width="1dp"
         android:color="#fff" />
