--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,10 +24,10 @@
                 android:id="@+id/order_bar"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="dp"
                 android:layout_marginBottom="4dp"
                 android:background="#000000"
-                android:fontFamily="monospace"
+                android:fontFamily="@font/aa"
                 android:foregroundTintMode="multiply"
                 android:gravity="center|right"
                 android:lineSpacingExtra="0sp"
@@ -61,11 +61,11 @@
             <TextView
                 android:id="@+id/menu"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="4dp"
                 android:background="#000000"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="@font/aa"
                 android:gravity="center|right"
                 android:lineSpacingExtra="16sp"
                 android:text="메뉴 이름"
@@ -198,7 +198,8 @@
         android:layout_height="60dp"
         android:background = "#000000"
         android:layout_marginBottom="4dp"
-        android:text="결제"
+        android:text="장바구니 담기"
+        android:fontFamily="@font/aa"
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold"
