--- a/app/src/main/res/layout/shopping_recycleitem.xml
+++ b/app/src/main/res/layout/shopping_recycleitem.xml
@@ -28,17 +28,19 @@
             android:layout_height="0dp">
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="30"
+                android:layout_weight="40"
                 android:text="메뉴:"
                 android:textSize="16dp"
+                android:fontFamily="@font/aaa"
                 android:gravity="center"
                 android:textColor="#000"
                 android:layout_height="match_parent"/>
             <TextView
-                android:layout_weight="70"
+                android:layout_weight="60"
                 android:id="@+id/item_title"
                 android:text="title"
-                android:textSize="18dp"
+                android:textSize="16dp"
+                android:fontFamily="@font/aaa"
                 android:gravity="center"
                 android:textColor="#3c5b9a"
                 android:layout_width="wrap_content"
@@ -56,18 +58,21 @@
                 android:layout_weight="40"
                 android:text="정보:"
                 android:textSize="16dp"
+                android:fontFamily="@font/aaa"
                 android:gravity="center"
                 android:textColor="#000"
                 android:layout_height="match_parent"/>
+
             <TextView
-                android:layout_weight="60"
                 android:id="@+id/item_description"
-                android:text="비밀번호"
-                android:textSize="18dp"
-                android:gravity="center"
-                android:textColor="#3c5b9a"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_weight="60"
+                android:fontFamily="@font/aaa"
+                android:gravity="center"
+                android:text="비밀번호"
+                android:textColor="#3c5b9a"
+                android:textSize="16dp" />
         </LinearLayout>
 
     </LinearLayout>
