--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -1,9 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".component.adminMenu">
+    <LinearLayout
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/borderbox"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="30dp"
+                android:src="@drawable/foodImage"
+                android:layout_height="30dp"/>
+
+            <EditText
+                android:id="@+id/menuName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:ems="20"
+                android:inputType="text"
+                android:layout_marginTop="5dp"
+                android:background="@null"
+                android:hint="메뉴 이름을 작성하세요." />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/borderbox"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="30dp"
+                android:src="@drawable/foodImage"
+                android:layout_height="30dp"/>
+
+            <EditText
+                android:id="@+id/menuInfo"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:ems="20"
+                android:inputType="text"
+                android:layout_marginTop="5dp"
+                android:background="@null"
+                android:hint="메뉴 설명을 작성하세요." />
+        </LinearLayout>
+
+
+        <ImageView
+            android:id="@+id/user_image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:maxWidth="200dp"
+            android:maxHeight="200dp"
+            android:src="@drawable/menuImage"
+            android:adjustViewBounds="true"
+            android:onClick="onClick"/>
+
+
+        <Button
+            android:id="@+id/btn_UploadPicture"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:text="사진 선택"
+            android:onClick="onClick"
+            android:textSize="15sp"/>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="저장" />
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
