--- a/app/src/main/res/layout/activity_shopping_basket.xml
+++ b/app/src/main/res/layout/activity_shopping_basket.xml
@@ -50,4 +50,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/shopping_basket_btn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background = "#000000"
+        android:layout_marginBottom="4dp"
+        android:text="결제 하기"
+        android:fontFamily="@font/aa"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 </LinearLayout>
