--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/order_bar"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_marginTop="dp"
+
                 android:layout_marginBottom="4dp"
                 android:background="#000000"
                 android:fontFamily="@font/aa"
@@ -59,7 +59,7 @@
                 android:background="#000000" />
 
             <TextView
-                android:id="@+id/menu"
+                android:id="@+id/text_menu_name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="5dp"
