--- a/app/src/main/res/layout/activity_total_menu_list.xml
+++ b/app/src/main/res/layout/activity_total_menu_list.xml
@@ -3,8 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:weightSum="100"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".component.TotalMenuList">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="5"
+        android:background="#000"
+        android:layout_height="30dp"
+        android:gravity="center"
+        >
+        <TextView
+
+            android:layout_gravity="center"
+            android:text="가게목록"
+            android:layout_marginTop="3sp"
+            android:textSize="26sp"
+            android:fontFamily="@font/aa"
+            android:textColor="#ffffff"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_total_view"
         android:layout_width="match_parent"
