--- a/app/src/main/res/layout/activity_make_room.xml
+++ b/app/src/main/res/layout/activity_make_room.xml
@@ -4,9 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:weightSum="100"
     android:layout_height="match_parent"
     tools:context=".component.MakeRoom">
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="10"
+        android:background="#000"
+        android:layout_height="50dp"
+        android:gravity="center"
+        >
+        <TextView
+
+            android:layout_gravity="center"
+            android:text="업소생성"
+            android:layout_marginTop="3sp"
+            android:textSize="26sp"
+            android:fontFamily="@font/aa"
+            android:textColor="#ffffff"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="36dp"
+        android:paddingBottom="36dp"
+        android:layout_weight="90"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
